--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: spring-boot-app
     spec:
+      imagePullSecrets:
+        - name: ghcr-secret
       containers:
       - name: spring-boot-app
         image: ghcr.io/thecodecloud007/spring-boot-k8s-demo
