--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -7,10 +7,11 @@ metadata:
   labels:
     app: spring-boot-app
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
   - port: 80
     targetPort: 8080
+    nodePort: 30080
     protocol: TCP
     name: http
   selector:
